# dynamic-tool-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tmp_debug.py
agent/: __init__.py  main_agent.py
logs/: __init__.py  execution_logger.py  executions.jsonl  tool_stats.json
registry/: __init__.py  models.py  tool_registry.py
registry/tools/: __init__.py  calendar_manager.py  code_executor.py  currency_converter.py  database_query.py  document_reader.py  email_sender.py  timer_alarm.py  translation_service.py  weather_service.py  web_search.py
search/: __init__.py  embedder.py  tool_manager.py  vector_store.py
tests/: test_agent.py
